fixed svg;clear carts and jump to homepage after submitting

--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -40,7 +40,7 @@
     .logo {
         background-color: rgb(82, 98, 112);
         margin: 0;
-        padding: 0;
+        padding-top: 0.2vw;
         padding-left: 1vw;
         padding-right: 1vw;
         margin-top: -1.5vh;
